--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.22.3",
+    "tabletop": "^1.6.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
